--- a/src/variable.less
+++ b/src/variable.less
@@ -3,5 +3,12 @@
   padding-bottom: constant(safe-area-inset-bottom);
   padding-bottom: env(safe-area-inset-bottom);
 }
+html,body {
+    // overflow: hidden;
+}
+canvas {
+    
+}
+
 
 
